[LFC] Fix over-constrained logic for out-of-flow non-replaced horizontal geometry. https://bugs.webkit.org/show_bug.cgi?id=198879 <rdar://problem/51772995>

Reviewed by Antti Koivisto.

The over-constrained logic applies to the case when all the horizontal properties are set.

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::outOfFlowNonReplacedHorizontalGeometry):


Canonical link: https://commits.webkit.org/212853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246459 268f45cc-cd09-0410-ab3c-d52691b4dbfc